--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.51.15",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
