--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,10 @@
 {
-  "short_name": "React App",
+  "short_name": "APMail",
   "name": "AlphaMail",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "/images/pwaIcon.svg",
+      "sizes": "64x64",
       "type": "image/x-icon"
     },
     {
