--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
-    "framer-motion": "^11.3.8",
+    "framer-motion": "^11.3.28",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "swiper": "^11.1.9",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
@@ -63,6 +65,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-responsive": "^8.0.8",
     "craco-alias": "^3.0.1"
   }
 }
